cmake_minimum_required(VERSION 3.25)
project(DataStructures)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructures Array-Based-Lists/Example3-2.cpp Array-Based-Lists/Example3-3.cpp Array-Based-Lists/Example3-5.cpp Array-Based-Lists/arrayListType.h Array-Based-Lists/arrayListType.cpp Array-Based-Lists/polynomialType.h Array-Based-Lists/polynomialType.cpp STL/Example4-5.cpp STL/Example4-6.cpp STL/Example4-7.cpp STL/courseType.h)
